--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -30,9 +30,13 @@ jobs:
           git checkout
           echo "SDKTAG=`git describe --abbrev=0 --tags`" >> $GITHUB_ENV
           cd ..
+          git clone https://github.com/lmmx/boto-js
+          mv botocore/botocore/data/stepfunctions/2016-11-23/examples-1.json boto-js/apis/states-2016-11-23.examples.json
+          mv botocore/botocore/data/stepfunctions/2016-11-23/paginators-1.json boto-js/apis/states-2016-11-23.paginators.json
+          mv botocore/botocore/data/stepfunctions/2016-11-23/service-2.json boto-js/apis/states-2016-11-23.normal.json
           npm i
-          node getPreferred ./botocore/botocore/data
-          node aws2openapi ./botocore/botocore/data ./aws-openapi-schemas/schemas/botocore -y
+          node getPreferred ./boto-js/apis
+          node aws2openapi ./boto-js/apis ./aws-openapi-schemas/schemas/botocore -y
       - name: 🚀 Deploy
         id: deploy
         run: |
